--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@
 
     </section>
 
+<section id="product1" class="section-p1">
+    <h2>Featured Products</h2>
+    <p>Summer Collection New Morden Design</p>
+    <div class = "Pro-container">
+        <div class = "pro">
+            <img src="Image/products/f1.jpg" alt="">
+            <div class="des">
+                <span>adidas</span>
+                <h5>Cartoon Astronaut T-Shirts</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>RS.758</h4>
+            </div>
+            <a href="#"><i class="fal fa-shopping cart"></i></a>
+        </div>
+    </div>
+</section>
+
 
 
 
